@@ -21,8 +21,7 @@
 package de.unijena.bioinf.chemdb.annotations;
 
 import de.unijena.bioinf.chemdb.DataSource;
-import de.unijena.bioinf.chemdb.SearchableDatabase;
-import de.unijena.bioinf.chemdb.SearchableDatabases;
+import de.unijena.bioinf.chemdb.custom.CustomDataSources;
 import de.unijena.bioinf.ms.annotations.Ms2ExperimentAnnotation;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -32,33 +31,17 @@ import java.util.stream.Collectors;
 
 public abstract class SearchableDBAnnotation implements Ms2ExperimentAnnotation {
     public final static String NO_DB = "none";
-    public final List<SearchableDatabase> searchDBs;
+    public final List<CustomDataSources.Source> searchDBs;
     private final long filter;
-    private final boolean containsRestDb;
-    private final boolean containsCustomDb;
 
-    protected SearchableDBAnnotation(@Nullable Collection<SearchableDatabase> searchDBs) {
+    protected SearchableDBAnnotation(@Nullable Collection<CustomDataSources.Source> searchDBs) {
         this.searchDBs = searchDBs == null ? Collections.emptyList() : List.copyOf(searchDBs);
-        filter = this.searchDBs.stream().mapToLong(SearchableDatabase::getFilterFlag).reduce((a, b) -> a | b).orElse(0);
-        containsCustomDb = this.searchDBs.stream().anyMatch(SearchableDatabase::isCustomDb);
-        containsRestDb = this.searchDBs.stream().anyMatch(SearchableDatabase::isRestDb);
+        filter = this.searchDBs.stream().mapToLong(CustomDataSources.Source::flag).reduce((a, b) -> a | b).orElse(0);
     }
 
     @Override
     public String toString() {
-        return searchDBs.stream().map(SearchableDatabase::name).collect(Collectors.joining(","));
-    }
-
-    public boolean containsRestDB() {
-        return containsRestDb;
-    }
-
-    public boolean containsCustomDB() {
-        return containsCustomDb;
-    }
-
-    public boolean containsDBs() {
-        return !isEmpty();
+        return searchDBs.stream().map(CustomDataSources.Source::name).collect(Collectors.joining(","));
     }
 
     public boolean isEmpty() {
@@ -69,13 +52,13 @@ public abstract class SearchableDBAnnotation implements Ms2ExperimentAnnotation 
         return filter;
     }
 
-    public static List<SearchableDatabase> makeDB(@NotNull String names) {
-        if (names.equalsIgnoreCase(DataSource.ALL.realName) || names.equalsIgnoreCase(DataSource.ALL.name()))
-            return SearchableDatabases.getAllSelectableDbs();
-        if (names.equalsIgnoreCase(DataSource.ALL_BUT_INSILICO.realName) || names.equalsIgnoreCase(DataSource.ALL_BUT_INSILICO.name()))
-            return SearchableDatabases.getNonInSilicoSelectableDbs();
+    public static List<CustomDataSources.Source> makeDB(@NotNull String names) {
+        if (names.equalsIgnoreCase(DataSource.ALL.name()) || names.equalsIgnoreCase(DataSource.ALL.realName()))
+            return CustomDataSources.getAllSelectableDbs();
+        if (names.equalsIgnoreCase("ALL_BUT_INSILICO") || names.equalsIgnoreCase("All but combinatorial DBs")) //just for legacy command support
+            return CustomDataSources.getNonInSilicoSelectableDbs();
 
         return Arrays.stream(names.trim().split("\\s*,\\s*"))
-                .map(SearchableDatabases::getDatabase).flatMap(Optional::stream).distinct().collect(Collectors.toList());
+                .map(CustomDataSources::getSourceFromName).filter(Objects::nonNull).distinct().toList();
     }
 }
